--- a/package.json
+++ b/package.json
@@ -110,7 +110,7 @@
     ]
   },
   "dependencies": {
-    "@protectonce/agent": "0.1.28-beta.0",
+    "@protectonce/agent": "0.1.30",
     "body-parser": "^1.19.0",
     "check-dependencies": "^1.1.0",
     "clarinet": "^0.12.4",
